Fixed body overflow hidden

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -5,6 +5,7 @@
 
   html {
     overflow-x: hidden;
+    overflow-y: hidden;
   }
 
   //*, *::after, *::before {
